--- a/css/estilos.css
+++ b/css/estilos.css
@@ -85,6 +85,7 @@ main #menu a {
   color: black;
 }
 main .container {
+  margin-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,7 +101,7 @@ main .container {
           align-items: center;
 }
 main .container .titulo {
-  height: 300px;
+  height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -162,25 +163,35 @@ main #type, main #description {
 main #btn {
   margin-left: 20px;
   height: 48px;
-  padding: 0 16px;
   border: none;
-  font-size: 35px;
-  font-weight: 500;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  font-size: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.548);
           box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.548);
   border: 1px solid transparent;
+}
+
+.table {
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.548);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.548);
+  border: 1px solid transparent;
+  border-radius: 10px;
+}
+
+th, tr {
+  width: 150px;
+  border: 1PX SOLID red;
+  text-align: center;
 }
 
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 150px;
+  height: 100px;
 }
